trying to calc volume

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 41,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -102,9 +102,9 @@
     "        self.avg_price = 0\n",
     "    \n",
     "    def volume_potensial(self, high, low, close, volume):\n",
-    "        if close < UpperBandVol:\n",
-    "            self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
-    "        else: self.volume =0    \n",
+    "       # if close < UpperBandVol:\n",
+    "        self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
+    "        \n",
     "        \n",
     "\n"
    ]
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 42,
    "id": "937fe3c5",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
        "False"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 44,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 45,
    "id": "4c291a9a",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "2500.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 46,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -227,8 +227,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [35]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     84\u001b[0m             \u001b[38;5;66;03m# volume size block\u001b[39;00m\n\u001b[0;32m     85\u001b[0m             \n\u001b[0;32m     86\u001b[0m     \u001b[38;5;66;03m# The first opened position HERE I STOPED FOR THE NEXT TIME CODING\u001b[39;00m\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (status \u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (openPosStatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m&\u001b[39m (mystock\u001b[38;5;241m.\u001b[39mis_full()\u001b[38;5;241m==\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     90\u001b[0m         \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m         \u001b[43mmystock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mVolumePoten\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mClose\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# ДОПРАЦЮВАТИ\u001b[39;00m\n\u001b[0;32m     95\u001b[0m         \u001b[38;5;66;03m#if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\u001b[39;00m\n\u001b[0;32m     96\u001b[0m             \u001b[38;5;66;03m# оцінюємо потенціал обєму\u001b[39;00m\n\u001b[0;32m     97\u001b[0m         \u001b[38;5;66;03m#mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    102\u001b[0m         \n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m#     # working with first opened position\u001b[39;00m\n\u001b[0;32m    104\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (PriceOpen \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (status\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m):\n",
-      "Input \u001b[1;32mIn [31]\u001b[0m, in \u001b[0;36mStockBalance.add\u001b[1;34m(self, amount, price)\u001b[0m\n\u001b[0;32m     20\u001b[0m val\u001b[38;5;241m=\u001b[39mprice\u001b[38;5;241m*\u001b[39mamount\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmarket_value \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m val\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mavg_price \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmarket_value\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mqty\u001b[49m\n",
+      "Input \u001b[1;32mIn [47]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     84\u001b[0m             \u001b[38;5;66;03m# volume size block\u001b[39;00m\n\u001b[0;32m     85\u001b[0m             \n\u001b[0;32m     86\u001b[0m     \u001b[38;5;66;03m# The first opened position HERE I STOPED FOR THE NEXT TIME CODING\u001b[39;00m\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (status \u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (openPosStatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m&\u001b[39m (mystock\u001b[38;5;241m.\u001b[39mis_full()\u001b[38;5;241m==\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     90\u001b[0m         \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m         \u001b[43mmystock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mVolumePoten\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mClose\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# ДОПРАЦЮВАТИ\u001b[39;00m\n\u001b[0;32m     95\u001b[0m         \u001b[38;5;66;03m#if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\u001b[39;00m\n\u001b[0;32m     96\u001b[0m             \u001b[38;5;66;03m# оцінюємо потенціал обєму\u001b[39;00m\n\u001b[0;32m     97\u001b[0m         \u001b[38;5;66;03m#mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    102\u001b[0m         \n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m#     # working with first opened position\u001b[39;00m\n\u001b[0;32m    104\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (PriceOpen \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (status\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m):\n",
+      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36mStockBalance.add\u001b[1;34m(self, amount, price)\u001b[0m\n\u001b[0;32m     20\u001b[0m val\u001b[38;5;241m=\u001b[39mprice\u001b[38;5;241m*\u001b[39mamount\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmarket_value \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m val\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mavg_price \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmarket_value\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mqty\u001b[49m\n",
       "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
@@ -410,28 +410,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b1353715",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "9768.963839960557"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mystock.volume_pot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -443,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "f8c4c3b3",
    "metadata": {},
    "outputs": [],
@@ -454,57 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "5bd4afb6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Profit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Profit]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_day.sort_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "36f5ccaf",
    "metadata": {},
    "outputs": [],
@@ -530,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
