change filter 5usd and add position entry

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -37,6 +37,7 @@
     "RiskPertrade = 2000 # buy for sum \n",
     "TradeAfterDays = 3 # begin trade after TradeAfterDays days from start\n",
     "price_filter = 0.5 # below this price we open pos\n",
+    "price_Stock_filter = 5 # above this price we don't load stock\n",
     "high_prevClose = 0.1 # if high more than previous close on high_prevClose\n",
     "UpperBandVol = 0.7      # if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
     "LowwerBandVol = 0.09    #   if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -102,8 +103,11 @@
     "        self.avg_price = 0\n",
     "    \n",
     "    def volume_potensial(self, high, low, close, volume):\n",
-    "       # if close < UpperBandVol:\n",
-    "        self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
+    "        if abs(high-low)==0:\n",
+    "            self.volume_pot\n",
+    "            \n",
+    "        else:\n",
+    "            self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
     "        \n",
     "        \n",
     "\n"
@@ -119,28 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "937fe3c5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mystock.is_full()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -152,7 +143,7 @@
     "    stock_ticker = yf.Ticker(ticker_name)\n",
     "    r = stock_ticker.history(max,\"1d\",date_from_list)\n",
     "    price = r.iloc[0][\"Close\"]\n",
-    "    if price<price_filter:\n",
+    "    if price<price_Stock_filter:\n",
     "        res = True\n",
     "\n",
     "    return res\n"
@@ -160,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
@@ -170,36 +161,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "4c291a9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mystock.add(5000,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "f8d6f3ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2500.0"
+       "25078.889951109886"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mystock.volume_pot"
+    "mystock.market_value"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8d6f3ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -209,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -217,19 +210,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
+      "[*********************100%***********************]  1 of 1 completed\n",
       "[*********************100%***********************]  1 of 1 completed\n"
-     ]
-    },
-    {
-     "ename": "ZeroDivisionError",
-     "evalue": "float division by zero",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [47]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     84\u001b[0m             \u001b[38;5;66;03m# volume size block\u001b[39;00m\n\u001b[0;32m     85\u001b[0m             \n\u001b[0;32m     86\u001b[0m     \u001b[38;5;66;03m# The first opened position HERE I STOPED FOR THE NEXT TIME CODING\u001b[39;00m\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (status \u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (openPosStatus \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m) \u001b[38;5;241m&\u001b[39m (mystock\u001b[38;5;241m.\u001b[39mis_full()\u001b[38;5;241m==\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     90\u001b[0m         \u001b[38;5;66;03m#\u001b[39;00m\n\u001b[1;32m---> 92\u001b[0m         \u001b[43mmystock\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mVolumePoten\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mClose\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;66;03m# ДОПРАЦЮВАТИ\u001b[39;00m\n\u001b[0;32m     95\u001b[0m         \u001b[38;5;66;03m#if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\u001b[39;00m\n\u001b[0;32m     96\u001b[0m             \u001b[38;5;66;03m# оцінюємо потенціал обєму\u001b[39;00m\n\u001b[0;32m     97\u001b[0m         \u001b[38;5;66;03m#mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    102\u001b[0m         \n\u001b[0;32m    103\u001b[0m \u001b[38;5;66;03m#     # working with first opened position\u001b[39;00m\n\u001b[0;32m    104\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (PriceOpen \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m0\u001b[39m) \u001b[38;5;241m&\u001b[39m (status\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m):\n",
-      "Input \u001b[1;32mIn [41]\u001b[0m, in \u001b[0;36mStockBalance.add\u001b[1;34m(self, amount, price)\u001b[0m\n\u001b[0;32m     20\u001b[0m val\u001b[38;5;241m=\u001b[39mprice\u001b[38;5;241m*\u001b[39mamount\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmarket_value \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m val\n\u001b[1;32m---> 22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mavg_price \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmarket_value\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mqty\u001b[49m\n",
-      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
      ]
     }
    ],
@@ -250,6 +263,8 @@
     "    datefromlist = list_stocks.iloc[i]['NotDate']\n",
     "    #print('symbol=',symbol)\n",
     "    #print('datefromlist=',datefromlist)\n",
+    "    \n",
+    "    # error it may be situation, when price is fall down \n",
     "    if good_price(symbol,datefromlist)==False: # if price meet conditions\n",
     "        continue\n",
     "    \n",
@@ -281,6 +296,7 @@
     "    wdf['OpenPrice']=0\n",
     "    wdf['openPosStatus']=False\n",
     "    wdf['VolumePoten']=0\n",
+    "    wdf['MarketValue']=0\n",
     "    wdf['Profit']=0\n",
     "    wdf['StopPrice']=0\n",
     "    wdf['TargetPrice']=0\n",
@@ -297,10 +313,12 @@
     "    \n",
     "    \n",
     "    for index, row in wdf.iterrows():  # change to itter....\n",
-    "        # looking for opening signal \n",
+    "        \n",
+    "        # calculate volume potential\n",
     "        mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
     "        wdf.at[index,'VolumePoten']= mystock.volume_pot    \n",
     "        \n",
+    "        # looking for opening signal \n",
     "        if (PriceOpen ==0) & (lastrow[0]!=index): # if we haven't opened position and it's not last row\n",
     "            \n",
     "            if row['volsignal'] & row['TradeAfterDaysSig'] & row['GreenCandleSig'] & row['HighGrowPrevClose']:  # if Volume > than AvgVolume and green candle and high more then \n",
@@ -325,16 +343,11 @@
     "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False):\n",
     "            #\n",
     "            \n",
-    "            mystock.add(row['VolumePoten'], row['Close']) # ДОПРАЦЮВАТИ\n",
+    "            mid_price = abs(row['Close']-row['Low'])\n",
+    "            mystock.add(5000, mid_price)\n",
+    "            wdf.at[index,'MarketValue']= mystock.market_value\n",
     "            \n",
-    "            \n",
-    "            #if row['Close']<UpperBandVol:  # if price didn't rise more than upper band\n",
-    "                # оцінюємо потенціал обєму\n",
-    "            #mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
-    "            #print(mystock.volume_pot)\n",
-    "            #wdf.at[index,'VolumePoten']= mystock.volume_pot\n",
-    "            \n",
-    "\n",
+    "           \n",
     "            \n",
     "    #     # working with first opened position\n",
     "        if (PriceOpen >0) & (status==0):\n",
@@ -410,50 +423,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b1353715",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mystock.volume_pot\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "29a69b04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Profit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Profit]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stock_df = pd.DataFrame(stock_res, columns = ['Stock','Profit','TradeCount','ProfitTrades','LossTrades'])\n",
     "df_day = pd.DataFrame(df_data )\n",
-    "df_day.index.name =\"Date\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8c4c3b3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_day.index.name =\"Date\"\n",
+    "\n",
     "df_day = df_day.loc[df_day['Profit']!=0] # remove 0 values\n",
-    "df_day = df_day.groupby([df_day.index.date]).sum() # групуємо по даті\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5bd4afb6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_day = df_day.groupby([df_day.index.date]).sum() # групуємо по даті\n",
+    "\n",
+    "\n",
     "df_day.sort_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "36f5ccaf",
    "metadata": {},
    "outputs": [],
