stock_add function is ready

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 70,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -103,11 +103,14 @@
     "        self.avg_price = 0\n",
     "    \n",
     "    def volume_potensial(self, high, low, close, volume):\n",
+    "        \n",
     "        if abs(high-low)==0:\n",
     "            self.volume_pot\n",
     "            \n",
     "        else:\n",
-    "            self.volume_pot = float(((abs(close-low)/abs(high-low))*volume)*0.05)\n",
+    "            self.volume_pot = ((abs(close-low)/abs(high-low))*volume)*0.05\n",
+    "        if self.volume_pot == 0 :\n",
+    "            self.volume_pot = volume*0.05\n",
     "        \n",
     "        \n",
     "\n"
@@ -131,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -161,13 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 66,
    "id": "4c291a9a",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "mystock.add(5000,5)"
-   ]
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "self.qty 5000\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -202,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -287,7 +296,7 @@
     "    wdf['VolRise'] =wdf['Volume']/wdf['avgvol']-1      # building vol signal\n",
     "    wdf['PrevClose'] = wdf.Close.shift(1)      # write previous close\n",
     "    wdf['volsignal']=wdf['VolRise']>VolRise            # volume signal column\n",
-    "    wdf['GreenCandleSig'] = wdf['High']>wdf['Close']   # green candle\n",
+    "    wdf['GreenCandleSig'] = wdf['Close']>wdf['Open']   # green candle\n",
     "    wdf['HighGrowPrevClose'] = (wdf[\"High\"]/wdf['PrevClose']-1)> high_prevClose # high is bigger than previous low\n",
     "\n",
     "    wdf['TradeAfter']=wdf.index\n",
@@ -337,14 +346,30 @@
     "                \n",
     "                # volume size block\n",
     "                \n",
-    "        # The first opened position HERE I STOPED FOR THE NEXT TIME CODING\n",
+    "        # \n",
     "               \n",
     "        \n",
     "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False):\n",
     "            #\n",
+    "            mid_price = abs(row['Close']-row['Open']) # take avg.price for position\n",
+    "            if mid_price ==0:\n",
+    "                mid_price = row['Close']\n",
+    "\n",
+    "            # calc how many stocks you need\n",
+    "            need_cap = positionValue - mystock.market_value # how much capital we need\n",
+    "           # print('need_cap',need_cap)\n",
+    "           # print('mid_price',mid_price)\n",
+    "\n",
+    "            if (mid_price * row['VolumePoten']) >need_cap: # if potensial suit our demand\n",
+    "                amount = need_cap/mid_price\n",
+    "                mystock.add(amount, mid_price)\n",
+    "\n",
+    "            if (mid_price * row['VolumePoten']) < need_cap: # if there is no stock count for us\n",
+    "                #print('mid_price < need_cap', mid_price)\n",
+    "                mystock.add(wdf.at[index,'VolumePoten'], mid_price)\n",
+    "\n",
+    "\n",
     "            \n",
-    "            mid_price = abs(row['Close']-row['Low'])\n",
-    "            mystock.add(5000, mid_price)\n",
     "            wdf.at[index,'MarketValue']= mystock.market_value\n",
     "            \n",
     "           \n",
@@ -423,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -433,7 +458,7 @@
        "0.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,50 +469,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "id": "29a69b04",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Profit</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [Profit]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "stock_df = pd.DataFrame(stock_res, columns = ['Stock','Profit','TradeCount','ProfitTrades','LossTrades'])\n",
     "df_day = pd.DataFrame(df_data )\n",
@@ -497,16 +482,9 @@
     "df_day = df_day.groupby([df_day.index.date]).sum() # групуємо по даті\n",
     "\n",
     "\n",
-    "df_day.sort_index()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "36f5ccaf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_day.sort_index()\n",
+    "\n",
+    "\n",
     "with pd.ExcelWriter(\"outputFiles/output.xlsx\") as writer:\n",
     "   \n",
     "    # use to_excel function and specify the sheet_name and index\n",
@@ -518,12 +496,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "4c9ad6a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10000"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "positionValue\n"
    ]
   },
   {
