--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 73,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 85,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 86,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 87,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -154,54 +154,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "8f8438d5",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "mystock.volume_potensial(0.53, 0.47, 0.5, 100000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "4c291a9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "self.qty 5000\n"
-     ]
-    }
-   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f8d6f3ac",
+   "execution_count": null,
+   "id": "4c291a9a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25078.889951109886"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mystock.market_value"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f8d6f3ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -211,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -266,6 +243,7 @@
     "stock_small_res=[]\n",
     "#len(list_stocks)\n",
     "\n",
+    "# here begin to iterate between stocks\n",
     "for i in range(50): # потім прописати весь список\n",
     "    symbol = list_stocks.index[i] # беремо акцію по індексу\n",
     "\n",
@@ -279,6 +257,7 @@
     "    \n",
     "    # this is blok where stock suit out coundition\n",
     "    mystock = StockBalance(symbol)\n",
+    "    openPosStatus = False\n",
     "    # to calc average volume use 20 days before\n",
     "    start_date = datefromlist - datetime.timedelta(days=19)                                           \n",
     "    end_date = datefromlist + datetime.timedelta(days=180)\n",
@@ -291,7 +270,7 @@
     "\n",
     "\n",
     "\n",
-    "    # building features \n",
+    "    # building features in working dataframe\n",
     "    wdf['avgvol']= wdf['Volume'].rolling(window=AvgVolDayLimit, win_type=None).mean()  # середній обєм за 10 днів\n",
     "    wdf['VolRise'] =wdf['Volume']/wdf['avgvol']-1      # building vol signal\n",
     "    wdf['PrevClose'] = wdf.Close.shift(1)      # write previous close\n",
@@ -321,7 +300,7 @@
     "    status = 0\n",
     "    \n",
     "    \n",
-    "    for index, row in wdf.iterrows():  # change to itter....\n",
+    "    for index, row in wdf.iterrows():  # change to itertuple....\n",
     "        \n",
     "        # calculate volume potential\n",
     "        mystock.volume_potensial(row['High'],row['Low'],row['Close'],row['Volume'])\n",
@@ -372,7 +351,10 @@
     "            \n",
     "            wdf.at[index,'MarketValue']= mystock.market_value\n",
     "            \n",
-    "           \n",
+    "        if mystock.is_full()==True: # position is full\n",
+    "            openPosStatus == False\n",
+    "            \n",
+    "            \n",
     "            \n",
     "    #     # working with first opened position\n",
     "        if (PriceOpen >0) & (status==0):\n",
@@ -408,7 +390,7 @@
     "                StopPrice=0\n",
     "                openPosStatus=False\n",
     "   \n",
-    "    \n",
+    "             \n",
     "    #тут закінчується блок перебору строк акції і йде на наступну акцію\n",
     "    # 1. тікер\n",
     "    # 2. profit\n",
@@ -448,28 +430,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 91,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mystock.volume_pot\n"
+    "mystock.avg_price\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 90,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -496,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 83,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -506,7 +488,7 @@
        "10000"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
