--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "f64ba5a1",
    "metadata": {},
    "outputs": [],
@@ -24,25 +24,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "f65c9313",
    "metadata": {},
    "outputs": [],
    "source": [
     "# parameters\n",
-    "VolRise = 0.99  # open position, after current volume will be more than VolRise value\n",
-    "AvgVolDayLimit = 10 # average for shifting average\n",
-    "ExitAfter = 0.25 # close position after price achieve ExitAfter\n",
-    "StopLoss = -0.07 # close position after price meets stop\n",
-    "RiskPertrade = 2000 # buy for sum \n",
-    "TradeAfterDays = 3 # begin trade after TradeAfterDays days from start\n",
-    "price_filter = 0.5 # below this price we open pos\n",
-    "price_Stock_filter = 5 # above this price we don't load stock\n",
+    "VolRise = 0.99        # open position, after current volume will be more than VolRise value\n",
+    "AvgVolDayLimit = 10   # average for shifting average\n",
+    "ExitAfter = 0.25      # close position after price achieve ExitAfter\n",
+    "StopLoss = -0.07      # close position after price meets stop\n",
+    "RiskPertrade = 2000   # buy for sum \n",
+    "TradeAfterDays = 3    # begin trade after TradeAfterDays days from start\n",
+    "price_filter = 0.5     # below this price we open pos\n",
+    "price_Stock_filter = 5  # above this price we don't load stock\n",
     "high_prevClose = 0.1 # if high more than previous close on high_prevClose\n",
     "UpperBandVol = 0.7      # if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
     "LowwerBandVol = 0.09    #   if price is in range of  UpperBandVol and LowwerBandVol - please take a volume\n",
-    "positionValue = 10000  # the sum you need to collect\n",
-    "openPosStatus = False\n",
+    "positionValue = 10000   # the sum you need to collect\n",
+    "openPosStatus = False \n",
     "volume_potensial =0 \n",
     "\n"
    ]
@@ -65,14 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "1fe5694c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# для класу deposit потрібно\n",
-    "# кількість акцій\n",
-    "# середня ціна\n",
     "# дата старту набору позиції\n",
     "# дата закінчення набору позиції\n",
     "class StockBalance():\n",
@@ -134,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "5ef8a1be",
    "metadata": {},
    "outputs": [],
@@ -154,31 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "8f8438d5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4c291a9a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f8d6f3ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "f5c7c732",
    "metadata": {},
    "outputs": [],
@@ -188,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 14,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -330,20 +303,18 @@
     "        \n",
     "        if (status ==0) & (openPosStatus == True) & (mystock.is_full()==False):\n",
     "            #\n",
-    "            mid_price = abs(row['Close']-row['Open']) # take avg.price for position\n",
+    "            mid_price = (row['Close']+row['Open'])/2 # take avg.price for position\n",
     "            if mid_price ==0:\n",
     "                mid_price = row['Close']\n",
     "\n",
     "            # calc how many stocks you need\n",
     "            need_cap = positionValue - mystock.market_value # how much capital we need\n",
-    "           # print('need_cap',need_cap)\n",
-    "           # print('mid_price',mid_price)\n",
-    "\n",
-    "            if (mid_price * row['VolumePoten']) >need_cap: # if potensial suit our demand\n",
+    "           \n",
+    "            if (mid_price * row['VolumePoten']) >need_cap & mystock.is_full()==False : # if potensial suit our demand\n",
     "                amount = need_cap/mid_price\n",
     "                mystock.add(amount, mid_price)\n",
     "\n",
-    "            if (mid_price * row['VolumePoten']) < need_cap: # if there is no stock count for us\n",
+    "            if (mid_price * row['VolumePoten']) < need_cap & mystock.is_full()==False: # if there is no stock count for us\n",
     "                #print('mid_price < need_cap', mid_price)\n",
     "                mystock.add(wdf.at[index,'VolumePoten'], mid_price)\n",
     "\n",
@@ -351,7 +322,7 @@
     "            \n",
     "            wdf.at[index,'MarketValue']= mystock.market_value\n",
     "            \n",
-    "        if mystock.is_full()==True: # position is full\n",
+    "        if mystock.is_full()==True: # position is full we waiting for close signal\n",
     "            openPosStatus == False\n",
     "            \n",
     "            \n",
@@ -430,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "b1353715",
    "metadata": {},
    "outputs": [
@@ -440,7 +411,7 @@
        "0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
@@ -478,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 9,
    "id": "4c9ad6a9",
    "metadata": {},
    "outputs": [
@@ -488,7 +459,7 @@
        "10000"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 10,
    "id": "51ab625e",
    "metadata": {},
    "outputs": [],
