trying to find error

--- a/Stocks-PF-strategy.ipynb
+++ b/Stocks-PF-strategy.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "23c38abf",
    "metadata": {},
    "outputs": [
@@ -310,11 +310,11 @@
     "            # calc how many stocks you need\n",
     "            need_cap = positionValue - mystock.market_value # how much capital we need\n",
     "           \n",
-    "            if (mid_price * row['VolumePoten']) >need_cap & mystock.is_full()==False : # if potensial suit our demand\n",
+    "            if ((mid_price * row['VolumePoten']) >need_cap) & (mystock.is_full()==False) : # if potensial suit our demand\n",
     "                amount = need_cap/mid_price\n",
     "                mystock.add(amount, mid_price)\n",
     "\n",
-    "            if (mid_price * row['VolumePoten']) < need_cap & mystock.is_full()==False: # if there is no stock count for us\n",
+    "            if ((mid_price * row['VolumePoten'])) < need_cap & (mystock.is_full()==False): # if there is no stock count for us\n",
     "                #print('mid_price < need_cap', mid_price)\n",
     "                mystock.add(wdf.at[index,'VolumePoten'], mid_price)\n",
     "\n",
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "29a69b04",
    "metadata": {},
    "outputs": [],
